--- a/app/views/vacancies/edit.html.haml
+++ b/app/views/vacancies/edit.html.haml
@@ -1,5 +1,6 @@
 .row
   .col-md-7
+    %h2 Вакансия
     = simple_form_for @resource do |f|
       = f.input :title
       = f.label :date_of_submit
